--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "visualpath",
-  "homepage": "https://Suhaan-Bhandary.github.io/Path-Finding-Visualizer",
+  "homepage": "",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-lottie": "^1.2.3",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
